--- a/reactgrupal/public/index.html
+++ b/reactgrupal/public/index.html
@@ -9,8 +9,14 @@
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  
+
   <script src="https://kit.fontawesome.com/4bc23db062.js" crossorigin="anonymous"></script>
+
+  <link rel="stylesheet" type="text/css" charset="UTF-8"
+    href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" />
+  <link rel="stylesheet" type="text/css"
+    href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
+
   <title>Virtuosa</title>
 </head>
 
